<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/InsertarFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/insertar" />
        <item
            android:id="@+id/EditarFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/editar" />
        <item
            android:id="@+id/buscarFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/buscar" />
        <item
            android:id="@+id/eliminarFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/eliminar" />

    </group>
</menu>