<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.secuitymaps.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.secuitymaps.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.secuitymaps.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/buscarFragment"
        android:name="com.example.secuitymaps.ui.buscar.buscarFragment"
        android:label="fragment_buscar"
        tools:layout="@layout/fragment_buscar" />
    <fragment
        android:id="@+id/EditarFragment"
        android:name="com.example.secuitymaps.ui.editar.EditarFragment"
        android:label="fragment_editar"
        tools:layout="@layout/fragment_editar" />
    <fragment
        android:id="@+id/eliminarFragment"
        android:name="com.example.secuitymaps.ui.eliminar.eliminarFragment"
        android:label="fragment_eliminar"
        tools:layout="@layout/fragment_eliminar" />
    <fragment
        android:id="@+id/InsertarFragment"
        android:name="com.example.secuitymaps.ui.insertar.InsertarFragment"
        android:label="fragment_insertar"
        tools:layout="@layout/fragment_insertar" />
</navigation>